...
                                    <action selector="cancelBtn:" destination="rLg-0w-IjN" eventType="touchUpInside" id="XS4-P8-ac3"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J8h-3O-Lub">
                                <rect key="frame" x="354" y="26" width="34" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Save"/>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <viewLayoutGuide key="safeArea" id="hJu-Of-BH1"/>
                    </view>
                </viewController>
...
            <objects>
                <viewController id="kDs-D0-xgb" customClass="SetTimeAlarmVC" customModule="Assignment" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="n6J-DK-igv" customClass="Line" customModule="Assignment" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <datePicker contentMode="scaleToFill" verticalHuggingPriority="249" restorationIdentifier="timePicker" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="f1C-nc-Tub">
                                <rect key="frame" x="0.0" y="64" width="414" height="216"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="216" id="qSR-0a-Jrs"/>
                                </constraints>
                                <date key="date" timeIntervalSinceReferenceDate="558113278.37955594">
                                    <!--2018-09-08 15:27:58 +0000-->
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ofw-Zi-Pwh">
                                <rect key="frame" x="152" y="658" width="110" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="2Tx-7Z-xko"/>
                                    <constraint firstAttribute="width" constant="110" id="oJ2-tn-gE9"/>
                                </constraints>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <action selector="back:" destination="wC7-ws-pCJ" eventType="touchUpInside" id="R3r-MQ-DdP"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nEf-Wh-MHq">
                                <rect key="frame" x="81" y="284" width="252" height="200"/>
...
                                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ebq-V3-lO4" id="oDC-Cm-n6H">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Every Monday" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RdS-Cz-jhj">
                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.666666666666664"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="6T4-d2-sTH" id="UDv-3X-ivj"/>
                            <outlet property="delegate" destination="6T4-d2-sTH" id="m67-F6-iFV"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Repeat" id="E2b-vL-bzh"/>
                    <connections>
                        <segue destination="jap-IZ-w0t" kind="unwind" identifier="weekdaysUnwindSegue" unwindAction="unwindFromWeekdaysView:" id="kPb-b8-gcq"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Wqf-cr-tuJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                <exit id="jap-IZ-w0t" userLabel="Exit" sceneMemberID="exit"/>
...
