...
    var test: Int!
    var method: String!
    
    let alert = UIAlertController(title: "Compare Image", message: "You havent chosen any image or taken any image", preferredStyle: .actionSheet)
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.accessibilityIdentifier = "alarmPICtv"
        images = [UIImage(named:"camera")!]
        titles = ["set"]
        let paths = NSSearchPathForDirectoriesInDomains(.documentDirectory, .userDomainMask, true)
        // Get the Document directory path
        let documentDirectorPath:String = paths[0]
        // Create a new path for the new images folder
...
        actionSheet.view.accessibilityIdentifier = "custom_alert"
        actionSheet.view.accessibilityValue = "\(title)"
        let actionCamera:UIAlertAction = UIAlertAction(title: "Camera", style: .default, handler: { (action: UIAlertAction) in
            imagePickerController.sourceType = .camera
            imagePickerController.allowsEditing = true
            self.present(imagePickerController, animated: true, completion: nil)})
        let actionPhoto:UIAlertAction = UIAlertAction(title: "Photo Library", style: .default, handler: { (action: UIAlertAction) in
            imagePickerController.sourceType = .photoLibrary
            imagePickerController.allowsEditing = true
            self.present(imagePickerController, animated: true, completion: nil)})
        let actionCancel:UIAlertAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        actionSheet.addAction(actionCamera)
        actionSheet.addAction(actionPhoto)
...
