...
    var method: [UIImage] = [UIImage(named: "camera")!,UIImage(named:"tictactoe-1")!,UIImage(named:"math")!]
    var picArray:[String] = ["camera","tictactoe-1","math"]
    var color: [UIColor] = [UIColor .orange,UIColor .blue,UIColor .green]
    var position: [Int] = []
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.accessibilityIdentifier = "tableViewMethod"
        // Do any additional setup after loading the view.
    }
    
    override func viewWillDisappear(_ animated: Bool) {
        performSegue(withIdentifier: Identifier.methodUnwindIdentifier, sender: self)
    }
...
